--- a/AngelHackMaps/app/build.gradle
+++ b/AngelHackMaps/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-base:16.1.0'
+    implementation 'io.agora.rtc:full-sdk:2.4.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
