--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-basement:16.0.1'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
+    implementation 'io.agora.rtc:full-sdk:2.4.0'
+
 
 }
 
